  * Upgrade to Debian 11.
    - Replace pam_tally2 by pam_faillock
  * Introduce environment variable OMV_POSTFIX_MAIN_DEFAULT_TRANSPORT.
    To deactivate the sending of emails without affecting the
    additional notification sinks set it to 'discard'.
  * Add option to FTP settings to display the home directory of the
    user in the browse list.
  * Issue #1099: Add environment variables OMV_NGINX_SITE_WEBGUI_LISTEN_IPV4_ADDRESS
    and OMV_NGINX_SITE_WEBGUI_LISTEN_IPV6_ADDRESS to configure the
    WebUI to listen on a specific IP address only instead of all.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 Dec 2020 20:28:37 +0100

openmediavault (5.6.15-1) stable; urgency=low

  * Set correct time zone in proftpd.
  * Skip missing file systems when applying quotas.
  * Do not show used devices, e.g. that of a BTRFS RAID, in the file
    system creation dialog.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 26 Aug 2021 18:39:49 +0200

openmediavault (5.6.14-1) stable; urgency=low

  * Issue #1079: Clear out the local repository of retrieved package
    files to fix the "... InRelease' changed its 'Suite' value from
    'stable' to 'oldstable'" message.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 Jul 2021 18:17:05 +0200

openmediavault (5.6.13-1) stable; urgency=low

  * Issue #986: Divert files modified by openmediavault to prevent
    problems when package updates want to override them.
  * Issue #1058: Disable SMTPUTF8 support in Postfix. This extension
    seems not supported by all email providers. Use the environment
    variable OMV_POSTFIX_MAIN_SMTPUTF8_ENABLED to customize this
    behavior.
  * Issue 1068: Display UID/GID in user/group data tables. The columns
    are hidden by default.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 04 Jul 2021 18:55:14 +0200

openmediavault (5.6.12-1) stable; urgency=low

  * Issue #1054: The SMART device datatable is empty.
