@@ -26,5 +26,10 @@ set -e
 omv_config_add_key "/config/services/ftp" "homesenable" "0"
 omv_config_add_key "/config/system/fstab/mntent" "comment" ""
 omv_config_add_key "/config/system/fstab/mntent" "usagewarnthreshold" "85"
+omv_config_add_key "/config/services/smart/monitor/device" "tempdiff" "0"
+omv_config_add_key "/config/services/smart/monitor/device" "tempmax" "0"
+
+omv_config_delete "/config/services/smart/tempcrit"
+omv_config_rename "/config/services/smart/tempinfo" "tempmax"
 
 exit 0
