@@ -27,13 +27,7 @@
 			"maximum": 255,
 			"default": 0
 		},
-		"tempinfo":{
-			"type": "integer",
-			"minimum": 0,
-			"maximum": 255,
-			"default": 0
-		},
-		"tempcrit":{
+		"tempmax":{
 			"type": "integer",
 			"minimum": 0,
 			"maximum": 255,
@@ -63,6 +57,18 @@
 							"devicetype": {
 								"type": "string",
 								"default": ""
+							},
+							"tempdiff":{
+								"type": "integer",
+								"minimum": 0,
+								"maximum": 255,
+								"default": 0
+							},
+							"tempmax":{
+								"type": "integer",
+								"minimum": 0,
+								"maximum": 255,
+								"default": 0
 							}
 						}
 					}
