@@ -23,12 +23,7 @@
 			    "minimum": 0,
 				"required": true
 			},
-			"tempinfo": {
-			    "type": "integer",
-			    "minimum": 0,
-				"required": true
-			},
-			"tempcrit": {
+			"tempmax": {
 			    "type": "integer",
 			    "minimum": 0,
 				"required": true
