@@ -61,9 +61,81 @@ export class SmartDeviceFormPageComponent {
       {
         type: 'checkbox',
         name: 'enable',
-        label: gettext('Monitored'),
-        hint: gettext('Activate S.M.A.R.T. monitoring.'),
+        label: gettext('Monitoring enabled'),
         value: false
+      },
+      {
+        type: 'paragraph',
+        text: gettext('Temperature monitoring')
+      },
+      {
+        type: 'select',
+        name: 'tempdiff',
+        label: gettext('Difference'),
+        hint: gettext(
+          'Report if the temperature had changed by at least N degrees Celsius since last report.'
+        ),
+        value: 0,
+        store: {
+          data: [
+            [0, gettext('Use global settings')],
+            [1, '1°C'],
+            [2, '2°C'],
+            [3, '3°C'],
+            [4, '4°C'],
+            [5, '5°C'],
+            [6, '6°C'],
+            [7, '7°C'],
+            [8, '8°C'],
+            [9, '9°C'],
+            [10, '10°C'],
+            [11, '11°C'],
+            [12, '12°C'],
+            [13, '13°C'],
+            [14, '14°C'],
+            [15, '15°C']
+          ]
+        },
+        validators: {
+          min: 0,
+          required: true
+        }
+      },
+      {
+        type: 'select',
+        name: 'tempmax',
+        label: gettext('Maximum'),
+        hint: gettext('Report if the temperature is greater than or equal to N degrees Celsius.'),
+        value: 0,
+        store: {
+          data: [
+            [0, gettext('Use global settings')],
+            [5, '5°C'],
+            [10, '10°C'],
+            [15, '15°C'],
+            [20, '20°C'],
+            [25, '25°C'],
+            [30, '30°C'],
+            [35, '35°C'],
+            [40, '40°C'],
+            [45, '45°C'],
+            [50, '50°C'],
+            [55, '55°C'],
+            [60, '60°C'],
+            [65, '65°C'],
+            [70, '70°C'],
+            [75, '75°C'],
+            [80, '80°C'],
+            [85, '85°C'],
+            [90, '90°C'],
+            [95, '95°C'],
+            [100, '100°C']
+          ]
+        },
+        validators: {
+          min: 0,
+          required: true
+        }
       }
     ],
     buttons: [
